[gd_scene load_steps=3 format=3 uid="uid://b7eitxxv7ev22"]

[ext_resource type="Theme" uid="uid://dq00fxbljcbmj" path="res://assets/themes/default_theme.tres" id="1_mfmkw"]
[ext_resource type="Script" uid="uid://dqcdbk765i4st" path="res://scenes/ui/menus/in_game_menu.gd" id="2_tlxxp"]

[node name="InGameMenu" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_mfmkw")
script = ExtResource("2_tlxxp")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0117647, 0.14902, 0.34902, 0.501961)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="ButtonsVBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6

[node name="ExitMainMenu" type="Button" parent="MarginContainer/VBoxContainer/ButtonsVBox"]
layout_mode = 2
text = "Exit to Main Menu
"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer/ButtonsVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Exit"

[node name="BackButton" type="Button" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "< Back"

[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsVBox/ExitMainMenu" to="." method="_on_exit_main_menu_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsVBox/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="MarginContainer/BackButton" to="." method="_on_back_button_pressed"]
